src/styles/main.scss
@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');

$transparent: rgba(0, 0, 0, 0);
$black: rgba(#000000, 0.87);
$black-ter: rgba(#000000, 0.6);
$white: #ffffff;
$grey: #eeeeee;
$grey-light: #f5f5f5;
$grey-lighter: #ffffff;
$green: #00e676;
$green-light: #66ffa6;
$green-dark: #087f23;
$red: #ff3d00;
$divider: rgba(#000000, 0.12);

$family-sans-serif: 'Nunito', sans-serif;
$text: $black;
$text-invert: $white;

$primary: $green;
$primary-invert: $text;

$dark: $green-dark;
$dark-invert: $white;

$light: $grey-light;
$light-invert: $text;

$info: $light;
$info-invert: $light-invert;

$link: $dark;
$success: $dark;
$danger: $red;

$selection: rgba($green-light, 0.4);
::selection {
  background-color: $selection;
}

$primary-border-left: 5px solid $primary;

$content-blockquote-background-color: $selection;
$content-blockquote-border-left: $primary-border-left;

$navbar-height: 3.5rem;
$navbar-item-img-max-height: 40px;

$menu-item-active-color: $text;
$menu-item-active-background-color: $transparent;
$menu-label-color: $black-ter;

.menu-list a.is-active {
  border-left: $primary-border-left;
}

$table-cell-border: 1px solid $divider !important;
$table-striped-row-even-background-color: $grey;

.navbar-brand > a > img {
  width: auto;
  height: $navbar-item-img-max-height;
}

.center-img {
  margin-left: auto;
  margin-right: auto;
}

.center-column {
  text-align: center !important;
}

@import '~bulma/bulma.sass';

@media (min-width: $desktop) {
  .reverse-columns {
    flex-direction: row-reverse;
    display: flex;
  }
}

@media (min-width: $fullhd) {
  .hero-image {
    background: url('../assets/images/background.svg');
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
  }
}

@import '~prismjs-material-theme/sass/lighter.scss';

.number {
  all: initial;
  * {
    all: unset;
  }
}

$prismjs-theme-sass-core--selection-background: $selection;
$prismjs-theme-sass-core--base-font-size: 14px;
$prismjs-theme-sass-core--pre-color: $text;
$prismjs-theme-sass-core--pre-background: $light;
$prismjs-theme-sass-core--code-color: $text;
$prismjs-theme-sass-core--code-background: $light;

@mixin prismjs-theme-sass-core--token-attr-value() {
  color: $dark;
}

@mixin prismjs-theme-sass-core--token-attribute() {
  color: $dark;
}

@mixin prismjs-theme-sass-core--token-pseudo-class() {
  color: $dark;
}

@mixin prismjs-theme-sass-core--token-pseudo-element() {
  color: $dark;
}

@mixin prismjs-theme-sass-core--token-string() {
  color: $dark;
}

@include prismjs-theme-sass-core--generate();

